Fix spacing

--- a/src/index.sass
+++ b/src/index.sass
@@ -37,11 +37,9 @@ a:hover
 a:visited
   color: #73391a
 
-p
-  color: $dark-grey
-
-ol
-  color: $dark-grey
+hr
+  width: 75%
+  margin: 2.618rem 0
 
 .background_orange
   background: linear-gradient(45deg, #d17543 0%,#df7b3d 36%,#f48534 60%,#f79c59 100%)
