--- a/src/views/About/About.sass
+++ b/src/views/About/About.sass
@@ -3,7 +3,7 @@
 
 // CONTENT _____________________________________________________________________
 .about__content
-  margin-bottom: 6.854rem
+  margin-bottom: 4.236rem
   padding: 0 1.618rem
   width: 100%
 
@@ -49,7 +49,7 @@
 
 // TEMARIO SECTION _____________________________________________________________
 .temario
-  margin-top: 4.236rem
+  margin-top: 2.618rem
 
 // DESKTOP BREAKPOINTS _________________________________________________________
 +for-desktop-up
