--- a/src/views/About/Temario.sass
+++ b/src/views/About/Temario.sass
@@ -11,14 +11,15 @@
 .temario-list__item
   margin-top: 1rem
 
+.temario__area
+  margin-bottom: 3.272rem
+
 +for-desktop-up
   .temario__area
     width: 30%
-
-  .temario-list
     padding-right: 1.618rem
     border-right: 1px solid $light-brown
 
-  .temario__area:last-child>.temario-list
+  .temario__area:last-child
     padding-right: 0rem
     border-right: none
